Se crea clase CSS para centrar, poner en negrita y cursiva el párrafo

--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -5,3 +5,10 @@ body {
   margin: 0;
   padding: 0;
 }
+
+p {
+  font-size: 1.2em;
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+}
